# htcpp

./: .clang-format  .gitignore  Dockerfile  README.md  bench.sh  config-minimal.joml  config-multisite.joml  config-tls.joml  meson.build  meson_options.txt  run.sh
configs/: acme.joml  environment-vars.joml  header-editing.joml  limits.joml  minimal.joml  multisite.joml  routes.joml  tls.joml
notes/async_certificate_loading/: .gitignore  async.sh  load_cert_async.cpp  load_cert_sync.cpp  notes.md  sync.sh
scripts/: bench.sh  cert.cfg  create_cert.sh  docker-run.sh
src/: acme.cpp  acme.hpp  client.cpp  client.hpp  clienttest.cpp  config.cpp  config.hpp  events.cpp  events.hpp  fd.cpp  fd.hpp  filecache.cpp  filecache.hpp  filewatcher.cpp  filewatcher.hpp  function.hpp  hosthandler.cpp  hosthandler.hpp  htcpp.cpp  http.cpp  http.hpp  httpserver.cpp  ioqueue.cpp  ioqueue.hpp  libexample.cpp  log.cpp  log.hpp  lrucache.hpp  main.cpp  metrics.cpp  metrics.hpp  mpscqueue.hpp  pattern.cpp  pattern.hpp  result.hpp  router.cpp  router.hpp  server.cpp  server.hpp  slotmap.hpp  (+15 more)
subprojects/: clipp.wrap  cpprom.wrap  joml-cpp.wrap  liburingpp.wrap  minijson.wrap
testfiles/: lorem_ipsum.txt  lorem_ipsum_large.txt
tests/rate_limiting/: config.joml  test_rate_limiting.py
unittests/: main.cpp  test.hpp  time.cpp
